src/passes/snapshots/lumina2__passes__cst_gen__test__annotation_fn.snap
---
source: src/passes/cst_gen.rs
expression: "@some_annotation fn my_fn() {}"
---
Item {
    annotations: [
        Annotation {
            tok_at: At,
            key: Ident(
                "some_annotation",
            ),
            value: None,
        },
    ],
    kind: FunctionDeclaration(
        FunctionDeclaration {
            signature: FunctionSignature {
                tok_fn: Fn,
                name: Ident(
                    "my_fn",
                ),
                tok_l_parenthesis: LParenthesis,
                parameters: PunctuatedList {
                    items: [],
                    punctuation: [],
                },
                tok_r_parenthesis: RParenthesis,
                return_ty: None,
            },
            body: Block {
                tok_l_brace: LBrace,
                statements: [],
                tok_r_brace: RBrace,
            },
        },
    ),
}
