src/passes/snapshots/lumina2__passes__cst_gen__test__annotation_impl.snap
---
source: src/passes/cst_gen.rs
expression: "@some_annotation impl MyTrait for SomeType {}"
---
Item {
    annotations: [
        Annotation {
            tok_at: At,
            key: Ident(
                "some_annotation",
            ),
            value: None,
        },
    ],
    kind: TraitImplementation(
        TraitImplementation {
            tok_impl: Impl,
            name: Ident(
                "MyTrait",
            ),
            tok_for: For,
            ty: Named(
                Ident(
                    "SomeType",
                ),
            ),
            tok_l_brace: LBrace,
            methods: [],
            tok_r_brace: RBrace,
        },
    ),
}
