src/passes/snapshots/lumina2__passes__cst_gen__test__block_empty.snap
---
source: src/passes/cst_gen.rs
expression: "{ }"
---
Block {
    tok_l_brace: LBrace,
    statements: [],
    tok_r_brace: RBrace,
}
