src/passes/snapshots/lumina2__passes__cst_gen__test__block_expr.snap
---
source: src/passes/cst_gen.rs
expression: "{ 1 }"
---
Block {
    tok_l_brace: LBrace,
    statements: [
        Expr(
            ExprStatement {
                expr: Literal(
                    Integer(
                        IntegerLiteral(
                            IntLit(
                                1,
                            ),
                        ),
                    ),
                ),
                tok_semicolon: None,
            },
        ),
    ],
    tok_r_brace: RBrace,
}
