src/passes/snapshots/lumina2__passes__cst_gen__test__block_expression.snap
---
source: src/passes/cst_gen.rs
expression: "{ 1 }"
---
Block {
    tok_l_brace: LBrace,
    statements: [
        Expression(
            ExpressionStatement {
                expression: Literal(
                    Integer(
                        IntegerLiteral(
                            IntegerLiteral(
                                1,
                            ),
                        ),
                    ),
                ),
                tok_semicolon: None,
            },
        ),
    ],
    tok_r_brace: RBrace,
}
