src/passes/snapshots/lumina2__passes__cst_gen__test__block_statements_and_expr.snap
---
source: src/passes/cst_gen.rs
expression: "{ let a = 1; let b = 1; 1 }"
---
Block {
    tok_l_brace: LBrace,
    statements: [
        Let(
            LetStatement {
                tok_let: Let,
                variable: Ident(
                    "a",
                ),
                tok_eq: Eq,
                value: Literal(
                    Integer(
                        IntegerLiteral(
                            IntLit(
                                1,
                            ),
                        ),
                    ),
                ),
                tok_semicolon: SemiColon,
            },
        ),
        Let(
            LetStatement {
                tok_let: Let,
                variable: Ident(
                    "b",
                ),
                tok_eq: Eq,
                value: Literal(
                    Integer(
                        IntegerLiteral(
                            IntLit(
                                1,
                            ),
                        ),
                    ),
                ),
                tok_semicolon: SemiColon,
            },
        ),
        Expr(
            ExprStatement {
                expr: Literal(
                    Integer(
                        IntegerLiteral(
                            IntLit(
                                1,
                            ),
                        ),
                    ),
                ),
                tok_semicolon: None,
            },
        ),
    ],
    tok_r_brace: RBrace,
}
