src/passes/snapshots/lumina2__passes__cst_gen__test__external_function_full.snap
---
source: src/passes/cst_gen.rs
expression: "extern fn some_function(parameter_a: bool) -> u8;"
---
ExternalFunction {
    tok_extern: Extern,
    signature: FunctionSignature {
        tok_fn: Fn,
        name: Ident(
            "some_function",
        ),
        tok_l_parenthesis: LParenthesis,
        parameters: PunctuatedList {
            items: [
                FunctionParameter {
                    name: Ident(
                        "parameter_a",
                    ),
                    tok_colon: Colon,
                    ty: Named(
                        Ident(
                            "bool",
                        ),
                    ),
                },
            ],
            punctuation: [],
        },
        tok_r_parenthesis: RParenthesis,
        return_ty: Some(
            FunctionReturnType {
                tok_thin_arrow: ThinArrow,
                ty: Named(
                    Ident(
                        "u8",
                    ),
                ),
            },
        ),
    },
    tok_semicolon: SemiColon,
}
